--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The AI Restaurant Guy - Restaurant Marketing Automation</title>
-    <script type="module" src="/src/main.jsx"></script>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The AI Restaurant Guy | Recover Your Revenue</title>
+  </head>
+  <body>
     <div id="root"></div>
-</body>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
